2008-09-26  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: handle test for SSE in cross-compilation (fall
	back to checking if the ldmxcsr instruction compiles)

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am: added gsl_inline.h and build.h

	* gsl_mode.h gsl_pow_int.h: use new inline declarations

	* gsl_minmax.h: new header file for minmax functions, use new
	inline declarations

	* gsl_math.h: moved minmax functions to separate header file

	* configure.ac: test for C99 inline as well

	* build.h gsl_inline.h: added new header to handle GNU-style and
	C99 inlines

2008-03-17  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: remove hack to disable search for Fortran, Java,
	C++ required with earlier versions of autoconf

2007-09-01  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.m4: changed default name to AX_PATH_GSL

2007-08-22  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: started moving definitions out of
	acconfig.h (deprecated)

2007-07-30  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: check ieeefp.h for isfinite

2007-04-23  Brian Gough  <bjg@network-theory.co.uk>

	* acconfig.h (finite): don't redefine finite in terms of isfinite,
	which causes problems with system headers, use gsl_finite instead.

2007-04-17  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: use an actual floating point number instead of an
	integer for testing long double I/O.

2007-01-09  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_math.h (M_PI_4): corrected typo in higher digits of M_PI_4
	(at ~1e-20)

2006-11-02  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h templates_off.h: added UNSIGNED definition for
	detecting types without negative values

2006-02-15  Brian Gough  <bjg@network-theory.co.uk>

	* configure.ac: restrict darwin IEEE detection to powerpc, because
	new x86 macs are different.

	* removed automatic addition of compilation flags on alpha,