@@ -1,3 +1,8 @@
+2009-04-10  Brian Gough  <bjg@network-theory.co.uk>
+
+	* Makefile.am: generate gsl-config gsl.pc from Makefile instead
+	of configure, to allow make install prefix=...
+
 2008-09-26  Brian Gough  <bjg@network-theory.co.uk>
 
 	* configure.ac: handle test for SSE in cross-compilation (fall
